# pybsv-scaffolding

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  README.md  pyproject.toml  requirements.txt
examples/: retrieve_data.py  run_app.py  store_data.py
scripts/: check_node.py  setup_teranode.ps1
src/bsv_llm/: __init__.py  client.py  config.py  executor.py  retrieval.py  storage.py
tests/: __init__.py  test_config.py  test_integration.py  test_storage.py
